# -Agent-RAG-

./: .gitignore  .ingest_state.json  README.md  USAGE.md  api.py  err.txt  main.py  pyproject.toml  vector_store.json
app/: agent.py  cache.py  chain.py  config.py  graph.py  ingest.py  logging_setup.py  memory.py  prompt_manager.py  query.py  query_rewriter.py  reranker.py  retriever.py  state.py  store.py  tool_agent.py  tools.py
data/: data-structures.md  hello.md  ml-basics.md  python-basics.md  python-oop.md  丧尸末日之我的宠物会修仙.md
docs/: phase4-closure-design.md  project-summary.md  prompt-management.md  resume-experience.md
docs/superpowers/plans/: base.md  phase1-minimal-rag.md  phase2-optimized-rag.md  phase3-agent-design.md
docs/superpowers/specs/: 2026-07-02-rag-knowledge-base-design.md
docs/updata/: 工具调用层（Tool Calling）功能介绍.md
evaluation/: metrics.py  questions.json  runner.py
static/: index.html
tests/: test_chain.py  test_config.py  test_ingest.py
